2015-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Simplify mingw/unixy ifdefs for writing a file.

2015-02-05 	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTLS.m: Use path standardization when setting up TLS data
	to be mapped to a specific filesystem location.

2015-01-13  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/Foundation/Foundation.h: added NSUUID.h 

2014-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac:
	* Source/NSThread.m (PTHREAD_SETNAME):
	Fix detection of the proper pthread_setname_np and
	pthread_set_name_np variants on FreeBSD, OpenBSD and Darwin.

	* configure: Regenerated.

2014-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSSocketStream.m: Add necessary GSTLSHandler methods when
	TLS is disabled.
	* Source/GSTLS.m (standardizedPath): Define private function only
	when TLS is enabled.

2014-12-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m:
	* Source/nstzfile.h:
	Remove unused include of (possibly) non existent file.

2014-12-23 Riccardo Mottola <rm@gnu.org>

	* Source/GSSocketStream.m
	Fix code-path for non AF_INET6

	* Source/NSDate.m
	Provide NAN constant for Solaris if not available.

2014-11-29  Sergei Golovin <Golovin.SV@gmail.com>

	* Tests/base/NSURLConnection: Test helper tool plus a load of
	tests for NSURLConnection.

2014-11-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScanner.m: Fixup error in scanning doubles with excess
	precision (bug #43722).

2014-11-28  johannes@brilliantservice.co.jp

	* Source/NSThread.m: Set thread name visible to OS
	* configure.ac: test for pthread_set_name_np()
	Integrated Johannes patch with some changes to make things work if
	we set the name before starting the thread.  Commend out ms-windows
	code which doesn't work yet.

2014-11-20  Sergei Golovin <Golovin.SV@gmail.com>

	* Source/GSSocketStream.m:
	* Tests/base/NSURL/Helpers/capture.m:
	* Tests/base/NSURL/testKey.pem:
	* Tests/base/NSURL/test02.m: